--- a/arch/arm/configs/lineageos_vs985_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_vs985_oxavelar_defconfig
@@ -1649,7 +1649,7 @@ CONFIG_HW_RANDOM_MSM=y
 # CONFIG_DCC_TTY is not set
 # CONFIG_RAMOOPS is not set
 CONFIG_MSM_ADSPRPC=y
-# CONFIG_MSM_RDBG is not set
+CONFIG_MSM_RDBG=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
@@ -1709,7 +1709,7 @@ CONFIG_SPI_QUP=y
 #
 # CONFIG_SPI_SPIDEV is not set
 # CONFIG_SPI_TLE62X0 is not set
-# CONFIG_SPMI is not set
+CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_MSM_QPNP_INT=y
 CONFIG_SLIMBUS=y
