--- a/arch/arm/configs/lineageos_ls990_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_ls990_oxavelar_defconfig
@@ -348,7 +348,7 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-# CONFIG_WIFI_CONTROL_FUNC is not set
+CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_MSM_SLEEP_TIME_OVERRIDE is not set
 CONFIG_MSM_MEMORY_LOW_POWER_MODE_IDLE_ACTIVE=y
 CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_DEEP_POWER_DOWN=y
@@ -1061,6 +1061,10 @@ CONFIG_HAVE_BPF_JIT=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
+
+#
+# Bluetooth device drivers
+#
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -1068,13 +1072,7 @@ CONFIG_BT_BNEP=y
 CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
-
-#
-# Bluetooth device drivers
-#
-# CONFIG_BT_HCISMD is not set
-# CONFIG_BT_HCIBTUSB is not set
-# CONFIG_BT_HCIBTSDIO is not set
+CONFIG_BT_HCISMD=y
 # CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
@@ -1082,11 +1080,10 @@ CONFIG_BT_MSM_SLEEP=y
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-# CONFIG_MSM_BT_POWER is not set
+CONFIG_MSM_BT_POWER=y
 CONFIG_LGE_BLUETOOTH=y
 CONFIG_LGE_BLUESLEEP=y
-# CONFIG_AF_RXRPC is not set
-CONFIG_FIB_RULES=y
+
 CONFIG_WIRELESS=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
@@ -1853,7 +1850,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_QPNP_BMS is not set
 CONFIG_LGE_PM=y
 CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
-CONFIG_LGE_PM_LLK_MODE=y
+# CONFIG_LGE_PM_LLK_MODE is not set
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
 CONFIG_MAX17048_FUELGAUGE=y
 CONFIG_LGE_CURRENTNOW=y
