--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -2430,7 +2430,7 @@
 
 		qcom,vdd-apps-rstr{
 			qcom,vdd-rstr-reg = "vdd-apps";
-			qcom,levels = <1881600>;
+			qcom,levels = <1881600 1958400 2265600>;
 			qcom,freq-req;
 		};
 	};
