L2 Cache frequency curve smoothout

--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -1011,8 +1011,8 @@
 
 		qcom,l2-fmax =
 			<          0 0 >,
-			<  576000000 4 >,
-			< 1036800000 5 >,
+			<  729600000 3 >,
+			< 1267200000 5 >,
 			< 2035200000 7 >;
 
 		qcom,speed0-pvs0-bin-v0 =
@@ -1619,21 +1619,13 @@
 		governor = "cpufreq";
 		freq-tbl-khz =
 			<  300000 >,
-			<  345600 >,
-			<  422400 >,
 			<  499200 >,
-			<  576000 >,
-			<  652800 >,
 			<  729600 >,
-			<  806400 >,
 			<  883200 >,
 			<  960000 >,
 			< 1036800 >,
-			< 1113600 >,
 			< 1190400 >,
 			< 1267200 >,
-			< 1344000 >,
-			< 1420800 >,
 			< 1497600 >,
 			< 1574400 >,
 			< 1651200 >,
@@ -2430,7 +2422,7 @@
 
 		qcom,vdd-apps-rstr{
 			qcom,vdd-rstr-reg = "vdd-apps";
-			qcom,levels = <1881600 1958400 2265600>;
+			qcom,levels = <1881600>;
 			qcom,freq-req;
 		};
 	};
