--- a/arch/arm/configs/lineageos_d855_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d855_oxavelar_defconfig
@@ -2980,6 +2980,7 @@ CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
+CONFIG_DEVFREQ_GOV_MEMLAT=y
 
 #
 # DEVFREQ Drivers
