--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -1615,7 +1615,6 @@
 		reg = <0 4>;
 		compatible = "devfreq-simple-dev";
 		clock-name = "l2_clk";
-		polling-ms = <1>;
 		governor = "cpufreq";
 		freq-tbl-khz =
 			<  300000 >,
@@ -1631,7 +1630,6 @@
 			< 1728000 >,
 			< 1958400 >,
 			< 2035200 >;
-
 	};
 
 	memlat: qcom,memlat-cpu {
@@ -1654,7 +1652,7 @@
 
 	qcom,arm-memlat-mon {
 		compatible = "qcom,arm-memlat-mon";
-		qcom,firstcpu =	<&CPU0>;
+		qcom,cpulist =	<&CPU0>;
 		qcom,target-dev = <&memlat>;
 	};
 
@@ -1715,6 +1713,13 @@
 				< 2457600 7102 >;
 		};
 
+		mincpubw-cpufreq {
+			target-dev = <&mincpubw>;
+			cpu-to-dev-map =
+				< 960000  1525 >,
+				< 1497600 3509 >;
+		};
+
 		cache-cpufreq {
 			target-dev = <&cache>;
 			cpu-to-dev-map =
@@ -1730,15 +1735,7 @@
 				< 1728000 1728000 >,
 				< 2457600 2035200 >;
 		};
-
-		mincpubw-cpufreq {
-			target-dev = <&mincpubw>;
-			cpu-to-dev-map =
-				< 960000  1525 >,
-				< 1497600 3509 >;
-		};
 	};
-
 
 	qcom,msm-cpufreq@0 {
 		reg = <0 4>;
