--- a/arch/arm/configs/lineageos_d851_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d851_oxavelar_defconfig
@@ -133,12 +133,12 @@ CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_EMBEDDED=y
+CONFIG_HAVE_PERF_EVENTS=y
+CONFIG_PERF_USE_VMALLOC=y
 
 #
 # Kernel Performance Events And Counters
 #
-CONFIG_HAVE_PERF_EVENTS=y
-CONFIG_PERF_USE_VMALLOC=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
@@ -153,6 +153,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_HAVE_RCU_TABLE_FREE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=8
@@ -545,7 +546,7 @@ CONFIG_AEABI=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HIGHMEM=y
 # CONFIG_HIGHPTE is not set
-# CONFIG_HW_PERF_EVENTS is not set
+CONFIG_HW_PERF_EVENTS=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
@@ -2473,8 +2474,11 @@ CONFIG_SND_SOC=y
 #
 # MSM SoC Audio support
 #
+CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
+CONFIG_SND_SOC_MSM_QDSP6V2_INTF=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_QDSP6V2=y
+CONFIG_AUDIO_OCMEM=y
 CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
@@ -2984,14 +2988,12 @@ CONFIG_MSM_IOMMU_VBIF_CHECK=y
 # DEVFREQ Governors
 #
 CONFIG_PM_DEVFREQ=y
-CONFIG_LGE_DEVFREQ_DFPS=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 # CONFIG_DEVFREQ_GOV_USERSPACE is not set
-#CONFIG_DEVFREQ_GOV_CPUFREQ=y
+CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
-CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
@@ -2999,6 +3001,8 @@ CONFIG_DEVFREQ_GOV_MEMLAT=y
 #
 # DEVFREQ Drivers
 #
+CONFIG_DEVFREQ_SIMPLE_DEV=y
+CONFIG_MSM_DEVFREQ_DEVBW=y
 CONFIG_MOBICORE_SUPPORT=y
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=y
@@ -3047,7 +3051,14 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_GFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
-CONFIG_FS_POSIX_ACL=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+# CONFIG_F2FS_FS_POSIX_ACL is not set
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
+# CONFIG_FS_POSIX_ACL is not set
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
@@ -3109,14 +3120,6 @@ CONFIG_SDCARD_FS=y
 # CONFIG_PSTORE is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-# CONFIG_F2FS_FS_POSIX_ACL is not set
-CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
-# CONFIG_F2FS_FAULT_INJECTION is not set
-# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
