--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -16,7 +16,7 @@ menuconfig PM_DEVFREQ
 	  is attached to a single device and returns a "representative"
 	  clock frequency of the device, which is also attached
 	  to a device by 1-to-1. The device registering devfreq takes the
-	  responsiblity to "interpret" the representative frequency and
+	  responsibility to "interpret" the representative frequency and
 	  to set its every clock accordingly with the "target" callback
 	  given to devfreq.
 
@@ -79,6 +79,33 @@ config DEVFREQ_GOV_MSM_ADRENO_TZ
 	  Sets the frequency using a "on-demand" algorithm.
 	  This governor is unlikely to be useful for other devices.
 
+config MSM_BIMC_BWMON
+	tristate "MSM BIMC Bandwidth monitor hardware"
+	depends on ARCH_MSM
+	help
+	  The BIMC Bandwidth monitor hardware allows for monitoring the
+	  traffic coming from each master port connected to the BIMC. It also
+	  has the capability to raise an IRQ when the count exceeds a
+	  programmable limit.
+
+config DEVFREQ_GOV_MSM_GPUBW_MON
+	tristate "GPU BW voting governor"
+	depends on DEVFREQ_GOV_MSM_ADRENO_TZ
+	help
+	 MSM GPU governor for GPU bus bandwidth voting.
+	 This governor works together with MSM Adreno Trustzone governor,
+	 and select bus frequency votes using an "on-demand" alorithm..
+	 This governor is unlikely to be useful for non-MSM devices.
+
+config ARMBW_HWMON
+	tristate "ARM PMU Bandwidth monitor hardware"
+	depends on ARCH_MSM8916 || ARCH_MSM8226 || ARCH_MSM8610
+	help
+	  The PMU present on these ARM cores allow for the use of counters to
+	  monitor the traffic coming from each core to the bus. It also has the
+	  capability to raise an IRQ when the counter overflows, which can be
+	  used to get an IRQ when the count exceeds a certain value
+
 config ARM_MEMLAT_MON
 	tristate "ARM CPU Memory Latency monitor hardware"
 	depends on ARCH_MSM
@@ -87,6 +114,34 @@ config ARM_MEMLAT_MON
 	  monitor the memory latency characteristics of an ARM CPU workload.
 	  This driver uses these counters to implement the APIs needed by
 	  the mem_latency devfreq governor.
+
+config DEVFREQ_GOV_MSM_BW_HWMON
+	tristate "HW monitor based governor for device BW"
+	depends on MSM_BIMC_BWMON || ARCH_MSM_KRAIT
+	help
+	  HW monitor based governor for device to DDR bandwidth voting.
+	  This governor sets the CPU BW vote by using BIMC counters to monitor
+	  the CPU's use of DDR. Since this uses target specific counters it
+	  can conflict with existing profiling tools.  This governor is unlikely
+	  to be useful for non-MSM devices.
+
+config DEVFREQ_GOV_MSM_CACHE_HWMON
+	tristate "HW monitor based governor for cache frequency"
+	help
+	  HW monitor based governor for cache frequency scaling. This
+	  governor sets the cache frequency by using PM counters to monitor the
+	  CPU's use of cache. Since this governor uses some of the PM counters
+	  it can conflict with existing profiling tools. This governor is
+	  unlikely to be useful for other devices.
+
+config DEVFREQ_GOV_SPDM_HYP
+	bool "MSM SPDM Hypervisor Governor"
+	depends on ARCH_MSM
+	help
+	  Hypervisor based governor for CPU bandwidth voting
+	  for MSM chipsets.
+	  Sets the frequency using a "on-demand" algorithm.
+	  This governor is unlikely to be useful for other devices.
 
 config DEVFREQ_GOV_MEMLAT
 	tristate "HW monitor based governor for device BW"
@@ -98,45 +153,7 @@ config DEVFREQ_GOV_MEMLAT
 	  this uses target specific counters it can conflict with existing profiling
 	  tools.
 
-config MSM_BIMC_BWMON
-	tristate "MSM BIMC Bandwidth monitor hardware"
-	depends on ARCH_MSM
-	help
-	  The BIMC Bandwidth monitor hardware allows for monitoring the
-	  traffic coming from each master port connected to the BIMC. It also
-	  has the capability to raise an IRQ when the count exceeds a
-	  programmable limit.
-
-config DEVFREQ_GOV_MSM_BW_HWMON
-	tristate "HW monitor based governor for device BW"
-	depends on ARCH_MSM_KRAIT || ARCH_MSM_BIMC_BWMON
-	help
-	  HW monitor based governor for device to DDR bandwidth voting.
-
-	  When this governor is used for Krait CPUs, it sets the Krait CPU BW
-	  vote by using L2 PM counters to monitor the Krait's use of DDR.
-	  Since this uses some of the Krait PM counters it can conflict with
-	  existing profiling tools.  This governor is unlikely to be useful
-	  for non-MSM devices.
-
-config DEVFREQ_GOV_MSM_CACHE_HWMON
-	tristate "HW monitor based governor for cache frequency"
-	help
-	  HW monitor based governor for cache frequency scaling. This
-	  governor currently supports only Krait L2 PM counters.  Sets the
-	  cache frequency by using L2 PM counters to monitor the Krait's use
-	  of the L2.  Since this governor uses some of the PM counters it can
-	  conflict with existing profiling tools.  This governor is unlikely
-	  to be useful for other devices.
-
 comment "DEVFREQ Drivers"
-
-config LGE_DEVFREQ_DFPS
-	bool "LG G3 Dynamic LCD Refresh Driver"
-	select ARCH_HAS_OPP
-	select DEVFREQ_GOV_SIMPLE_ONDEMAND
-	help
-	  This adds the DEVFREQ driver for LG G3 display
 
 config ARM_EXYNOS4_BUS_DEVFREQ
 	bool "ARM Exynos4210/4212/4412 Memory Bus DEVFREQ Driver"
@@ -174,5 +191,23 @@ config MSM_DEVFREQ_DEVBW
 	  DDR IB/AB bandwidth votes. This driver provides a SoC topology
 	  agnostic interface to so that some of the devfreq governors can be
 	  shared across SoCs.
+
+config SPDM_SCM
+	bool "MSM SPDM SCM based call support"
+	depends on DEVFREQ_SPDM
+	help
+	  SPDM driver support the dcvs algorithm logic being accessed via
+	  scm or hvc calls. This adds the support for SPDM interaction to
+          tz via SCM based call. If not selected then Hypervior interaction
+          will be activated.
+
+config DEVFREQ_SPDM
+	bool "MSM SPDM based bandwidth voting"
+	depends on ARCH_MSM
+	select DEVFREQ_GOV_SPDM_HYP
+	help
+	  This adds the support for SPDM based bandwidth voting on MSM chipsets.
+	  This driver allows any SPDM based client to vote for bandwidth.
+	  Used with the MSM SPDM Hypervisor Governor.
 
 endif # PM_DEVFREQ
