--- a/arch/arm/configs/lineageos_ls990_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_ls990_oxavelar_defconfig
@@ -2497,6 +2497,9 @@ CONFIG_SND_SOC_MSM8974=y
 CONFIG_SND_SOC_APQ8074=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_CS35L32=y
+CONFIG_SND_SOC_WCD9320=y
+CONFIG_SND_SOC_TPA2015D=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
