--- a/arch/arm/configs/lineageos_d851_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d851_oxavelar_defconfig
@@ -350,8 +350,10 @@ CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
-# CONFIG_MSM_SLEEP_TIME_OVERRIDE is not set
+CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+CONFIG_MSM_MEMORY_LOW_POWER_MODE=y
 CONFIG_MSM_MEMORY_LOW_POWER_MODE_IDLE_ACTIVE=y
+CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_RETENTION=y
 CONFIG_MSM_MEMORY_LOW_POWER_MODE_SUSPEND_DEEP_POWER_DOWN=y
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
