m4m_hwmon: Adding this for MSM8974 ;)

--- a/arch/arm/configs/lineageos_d850_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d850_oxavelar_defconfig
@@ -2984,6 +2984,7 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 # CONFIG_DEVFREQ_GOV_USERSPACE is not set
 CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
+CONFIG_MSM_M4M_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
