--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -115,6 +115,15 @@ config ARM_MEMLAT_MON
 	  This driver uses these counters to implement the APIs needed by
 	  the mem_latency devfreq governor.
 
+config MSM_M4M_HWMON
+	tristate "MSM M4M cache monitor hardware"
+	depends on ARCH_MSM
+	help
+	  MSM M4M has counters that can be used to monitor requests coming to
+	  M4M. MSM M4M hardware monitor device programs corresponding registers
+	  to monitor cache and inform governor. It can also set an IRQ when
+	  count exceeds a programmable limit.
+
 config DEVFREQ_GOV_MSM_BW_HWMON
 	tristate "HW monitor based governor for device BW"
 	depends on MSM_BIMC_BWMON || ARCH_MSM_KRAIT
