--- a/arch/arm/boot/dts/msm8974pro.dtsi
+++ b/arch/arm/boot/dts/msm8974pro.dtsi
@@ -1572,25 +1572,25 @@
 	qcom,chipid = <0x03030002>;
 	qcom,msm-bus,num-cases = <8>;
 	qcom,bus-control;
-	qcom,initial-pwrlevel = <4>;
+	qcom,initial-pwrlevel = <5>;
 
 	/* Updated bus bandwidth requirements */
 	qcom,msm-bus,vectors-KBps =
 		/* Off */
 		<26 512 0 0>, <89 604 0 0>,
 		<26 512 0 0>, <89 604 0 0>,
-		/* gpu=200 bus=400 ddr=400/933 */
-		<26 512 0 3200000>, <89 604 0 3200000>,
-		/* gpu=330 bus=533 ddr=533/933 */
-		<26 512 0 4264000>, <89 604 0 3680000>,
-		/* gpu=389 bus=633 ddr=800/933 */
-		<26 512 0 5064000>, <89 604 0 6400000>,
-		/* gpu=462 bus=800 ddr=800/933 */
-		<26 512 0 6400000>, <89 604 0 6400000>,
-		/* gpu=578 bus=900 ddr=900/933 */
-		<26 512 0 7200000>, <89 604 0 7200000>,
-		/* gpu=620 bus=933 ddr=933/933 */
-		<26 512 0 7464000>, <89 604 0 7464000>;
+		/* gpu=200 bus=460 ddr=400 */
+		<26 512 0 3680000>, <89 604 0 3200000>,
+		/* gpu=330 bus=614 ddr=660 */
+		<26 512 0 4912000>, <89 604 0 5280000>,
+		/* gpu=389 bus=933 ddr=778 */
+		<26 512 0 7464000>, <89 604 0 6224000>,
+		/* gpu=462 bus=933 ddr=924 */
+		<26 512 0 7464000>, <89 604 0 7398000>,
+		/* gpu=578 bus=933 ddr=900 */
+		<26 512 0 7464000>, <89 604 0 9248000>,
+		/* gpu=620 bus=933 ddr=1156 */
+		<26 512 0 7464000>, <89 604 0 9248000>;
 
 
 	qcom,gpu-pwrlevels {
