--- a/arch/arm/boot/dts/msm8974pro.dtsi
+++ b/arch/arm/boot/dts/msm8974pro.dtsi
@@ -1570,7 +1570,7 @@
 &msm_gpu {
 	/* Updated chip ID */
 	qcom,chipid = <0x03030002>;
-	qcom,msm-bus,num-cases = <8>;
+	qcom,msm-bus,num-cases = <7>;
 	qcom,bus-control;
 	qcom,initial-pwrlevel = <5>;
 
@@ -1578,19 +1578,18 @@
 	qcom,msm-bus,vectors-KBps =
 		/* Off */
 		<26 512 0 0>, <89 604 0 0>,
-		<26 512 0 0>, <89 604 0 0>,
-		/* gpu=200 bus=533 ddr=400 */
-		<26 512 0 3680000>, <89 604 0 3200000>,
-		/* gpu=330 bus=667 ddr=667 */
-		<26 512 0 5336000>, <89 604 0 5336000>,
-		/* gpu=389 bus=933 ddr=778 */
-		<26 512 0 7464000>, <89 604 0 6224000>,
-		/* gpu=462 bus=933 ddr=933 */
-		<26 512 0 7464000>, <89 604 0 7464000>,
-		/* gpu=578 bus=1200 ddr=1200 */
-		<26 512 0 9600000>, <89 604 0 9600000>,
-		/* gpu=620 bus=1200 ddr=1200 */
-		<26 512 0 9600000>, <89 604 0 9600000>;
+		/* gpu=200 bus=300 ddr=400 */
+		<26 512 0 4800000>, <89 604 0 3200000>,
+		/* gpu=330 bus=400 ddr=667 */
+		<26 512 0 6400000>, <89 604 0 5336000>,
+		/* gpu=389 bus=500 ddr=778 */
+		<26 512 0 8000000>, <89 604 0 6224000>,
+		/* gpu=462 bus=600 ddr=933 */
+		<26 512 0 9600000>, <89 604 0 7464000>,
+		/* gpu=578 bus=700 ddr=1333 */
+		<26 512 0 11200000>, <89 604 0 10664000>,
+		/* gpu=620 bus=800 ddr=1600 */
+		<26 512 0 12800000>, <89 604 0 12800000>;
 
 
 	qcom,gpu-pwrlevels {
@@ -1602,43 +1601,49 @@
                qcom,gpu-pwrlevel@0 {
                        reg = <0>;
                        qcom,gpu-freq = <620000000>;
-                       qcom,bus-freq = <7>;
-                       qcom,bus-min = <7>;
+                       qcom,bus-freq = <6>;
+                       qcom,bus-min = <6>;
+                       qcom,bus-max = <6>;
                };
 
                qcom,gpu-pwrlevel@1 {
                        reg = <1>;
                        qcom,gpu-freq = <578000000>;
-                       qcom,bus-freq = <6>;
-                       qcom,bus-min = <6>;
+                       qcom,bus-freq = <5>;
+                       qcom,bus-min = <5>;
+                       qcom,bus-max = <6>;
                };
 
                qcom,gpu-pwrlevel@2 {
                        reg = <2>;
                        qcom,gpu-freq = <462400000>;
-                       qcom,bus-freq = <5>;
-                       qcom,bus-min = <5>;
+                       qcom,bus-freq = <4>;
+                       qcom,bus-min = <4>;
+                       qcom,bus-max = <6>;
                };
 
                qcom,gpu-pwrlevel@3 {
                        reg = <3>;
                        qcom,gpu-freq = <389000000>;
-                       qcom,bus-freq = <4>;
-                       qcom,bus-min = <4>;
+                       qcom,bus-freq = <3>;
+                       qcom,bus-min = <3>;
+                       qcom,bus-max = <5>;
                };
 
                qcom,gpu-pwrlevel@4 {
                        reg = <4>;
                        qcom,gpu-freq = <330000000>;
-                       qcom,bus-freq = <3>;
-                       qcom,bus-min = <3>;
+                       qcom,bus-freq = <2>;
+                       qcom,bus-min = <2>;
+                       qcom,bus-max = <4>;
                };
 
                qcom,gpu-pwrlevel@5 {
                        reg = <5>;
                        qcom,gpu-freq = <200000000>;
-                       qcom,bus-freq = <2>;
-                       qcom,bus-min = <2>;
+                       qcom,bus-freq = <1>;
+                       qcom,bus-min = <1>;
+                       qcom,bus-max = <2>;
                };
 
                qcom,gpu-pwrlevel@6 {
@@ -1646,6 +1651,7 @@
                        qcom,gpu-freq = <27000000>;
                        qcom,bus-freq = <0>;
                        qcom,bus-min = <0>;
+                       qcom,bus-max = <1>;
                };
 
                qcom,gpu-pwrlevel@7 {
@@ -1653,6 +1659,7 @@
                        qcom,gpu-freq = <27000000>;
                        qcom,bus-freq = <0>;
                        qcom,bus-min = <0>;
+                       qcom,bus-max = <0>;
                };
        };
 };
