--- a/arch/arm/configs/lineageos_d852_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d852_oxavelar_defconfig
@@ -3386,3 +3386,5 @@ CONFIG_NLATTR=y
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
