--- a/arch/arm/configs/lineageos_d851_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d851_oxavelar_defconfig
@@ -70,6 +70,7 @@ CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_IRQ_DOMAIN=y
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_SPARSE_IRQ=y
+CONFIG_IRQ_FORCED_THREADING=y
 
 #
 # RCU Subsystem
