--- a/arch/arm/configs/lineageos_d850_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d850_oxavelar_defconfig
@@ -2928,8 +2928,11 @@ CONFIG_ZSMALLOC=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
+# CONFIG_ANDROID_PERSISTENT_RAM is not set
 # CONFIG_ANDROID_RAM_CONSOLE is not set
 # CONFIG_PERSISTENT_TRACER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -2953,7 +2956,7 @@ CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCOM_TDLS=y
-# CONFIG_ENABLE_LINUX_REG is not set
+CONFIG_ENABLE_LINUX_REG=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3065,7 +3068,6 @@ CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_FS_POSIX_ACL is not set
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
-CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
 # CONFIG_QUOTA is not set
