--- a/arch/arm/configs/lineageos_d855_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_d855_oxavelar_defconfig
@@ -2929,8 +2929,11 @@ CONFIG_ZSMALLOC=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
+# CONFIG_ANDROID_PERSISTENT_RAM is not set
 # CONFIG_ANDROID_RAM_CONSOLE is not set
 # CONFIG_PERSISTENT_TRACER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -2954,7 +2957,7 @@ CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCOM_TDLS=y
-# CONFIG_ENABLE_LINUX_REG is not set
+CONFIG_ENABLE_LINUX_REG=y
 
 #
 # Qualcomm MSM specific device drivers
