--- a/arch/arm/configs/lineageos_ls990_oxavelar_defconfig
+++ b/arch/arm/configs/lineageos_ls990_oxavelar_defconfig
@@ -2964,8 +2964,11 @@ CONFIG_ZSMALLOC=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
+# CONFIG_ANDROID_PERSISTENT_RAM is not set
 # CONFIG_ANDROID_RAM_CONSOLE is not set
 # CONFIG_PERSISTENT_TRACER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3093,7 +3096,6 @@ CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_FS_POSIX_ACL is not set
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
-CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
 # CONFIG_QUOTA is not set
